# app/controllers/auth_controller.rb
@@ -1,4 +1,16 @@
 class AuthController < ApplicationController
+  # Endpoint de Registro
+  def register
+    @user = User.new(user_params)
+
+    if @user.save
+      # has_secure_password se encarga de encriptar automáticamente
+      render json: { id: @user.id, email: @user.email }, status: :created
+    else
+      # Devolvemos errores si el email ya existe o contraseña muy corta
+      render json: { errors: @user.errors.full_messages }, status: :unprocessable_entity
+    end
+  end
   def login
     @user = User.find_by("LOWER(email) = ?", params[:email].downcase)
 
@@ -17,5 +29,9 @@ class AuthController < ApplicationController
 
   def login_params
     params.permit(:email, :password)
+  end
+
+  def user_params
+    params.require(:user).permit(:email, :password)
   end
 end
